Display tags on detail,  register animal with tags

--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -57,21 +57,21 @@
               </div>
             </div>
           
-<!--             
+            
             <div class="container">
               <h4 class="row">Likes:</h4>
               <div class="row" style="width: 100%">
-                <div *ngFor="let like of animal.likes" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{like}}</span></div>
+                <div *ngFor="let like of animalLikes" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{like.content}}</span></div>
               </div>
               <h4 class="row">Qualities:</h4>
               <div class="row">
-                <div *ngFor="let quality of animal.qualities" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{quality}}</span></div>
+                <div *ngFor="let quality of animalQualities" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{quality.content}}</span></div>
               </div>
               <h4 class="row">Good With:</h4>
               <div class="row">
-                <div *ngFor="let goodWith of animal.goodWith" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{goodWith}}</span></div>
+                <div *ngFor="let goodWith of animalGoodWith" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{goodWith.content}}</span></div>
               </div>
-            </div> -->
+            </div>
             
             
             
