--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -27,10 +27,20 @@
   </div>
 
   <div *ngIf="loggedIn()" class="dropdown" dropdown>
-    <a class="dropdown-toggle text-light" dropdownToggle>
-      Welcome {{authService.decodedToken?.unique_name | titlecase}}
-    </a>
-  
+    <div class="row">
+      <div class="col">
+        <span class="mr-1">
+          <img src="{{photoUrl}}" alt="">
+        </span>
+      </div>
+      <div class="col">
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authService.decodedToken?.unique_name | titlecase}}
+      </a>
+      </div>
+    </div>
+    
+
     <div class="dropdown-menu mt-3" *dropdownMenu>
       <a class="dropdown-item" [routerLink]="['/user-edit']" routerLinkActive="router-link-active" ><i class="fa fa-user mr-1"></i>Edit Profile</a>
       <div class="dropdown-divider"></div>
