--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
@@ -38,21 +38,41 @@ img {
 }
 
 .speech-bubble {
-    background-color: #ececec;
-    border: 1px solid #c8c8c8;
-    border-radius: 5px;
-    width: 110px;
-    text-align: center;
+	position: relative;
+	background: #d8d5d6;
+    border-radius: .4em;
+    max-width: 300px;
+    padding: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
-.speech-bubble .arrow {
-    border-style: solid;
+.float-right :after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 5px solid transparent;
+	border-left-color: #d8d5d6;
+	border-right: 0;
+	margin-top: -5px;
+	margin-right: -5px;
 }
- 
-.bottom {
-    border-color: #c8c8c8 transparent transparent transparent;
-    border-width: 8px 8px 0px 8px;
-    bottom: -8px;
+
+.left{
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 5px solid transparent;
+	border-right-color: #d8d5d6;
+	border-left: 0;
+	margin-top: -5px;
+	margin-left: -5px;
 }
 
 .chat-body {
