A lot of random small stuff

--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-sm-9">
     <h4>{{recipient.knownAs}}</h4>
-    <small>Last Active: {{recipient.lastActive}}</small>
+    <small>Last Active: {{recipient.lastActive | timeago}}</small>
   </div>
 </div>
 
