--- a/AnimalShelter-SPA/src/app/register/register.component.html
+++ b/AnimalShelter-SPA/src/app/register/register.component.html
@@ -25,7 +25,9 @@
         </div>
 
         <div class="form-group">
-          <input type="text" class="form-control" required name="state" [(ngModel)]="model.state" placeholder="State">
+          <select class="form-control" id="state" required name="state" rows="1" [(ngModel)]="model.state" placeholder="State">
+            <option  *ngFor="let state of states" value="{{state}}">{{state}}</option>
+          </select>
         </div>
       
         <div class="form-group text-center">
