--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -19,28 +19,26 @@
       
         <div class="form-group">
           <label class="control-label" style="margin-right:10px">Your pet's name: </label>
-          <input class="form-control" type="text" placeholder="Name" formControlName="name">
+          <input type="text" 
+          [ngClass]="{'is-invalid': animalRegisterForm.get('name').errors && animalRegisterForm.get('name').touched}"
+          class="form-control" formControlName="name" placeholder="Name">
+          <div class="invalid-feedback">A name is required</div>
         </div>
         <div class="form-group">
-          <label class="control-label" style="margin-right:10px">Pet gender: </label>
+          <label class="control-label" style="margin-right:10px">Your pet is a: </label>
           <label class="radio-inline">
-            <input class="mr-1 ml-3" type="radio" value="male" formControlName="gender">Male
+            <input class="mr-3" type="radio" value="male" formControlName="gender">Male
           </label>
           <label class="radio-inline ml-3">
-            <input class="mr-1" type="radio" value="female" formControlName="gender">Female
+            <input class="mr-3" type="radio" value="female" formControlName="gender">Female
           </label>
         </div>
     
         <div class="form-group">
-          <!-- <select class="custom-select">
-            <option value="" disabled>Pet Type:</option>
-            <option><input value="dog" formControlName="species"> Dog</option>
-            <option><input value="dog" formControlName="species">Cat</option>
-         </select> -->
          <label class="control-label" style="margin-right:10px">Pet Type: </label>
-         <label class="radio-inline ml-3">
-          <input class="mr-1" type="radio" value="other" formControlName="species">Other
-        </label>
+          <label class="radio-inline ml-3">
+            <input class="mr-1" type="radio" value="other" formControlName="species">Other
+          </label>
           <label class="radio-inline">
             <input class="mr-1 ml-3" type="radio" value="dog" formControlName="species">Dog
           </label>
@@ -53,13 +51,12 @@
           <label class="control-label" style="margin-right:10px">Breed: </label>
           <input class="form-control" type="text" placeholder="Breed" formControlName="breed">
         </div>
-        <label class="control-label" style="margin-right:10px">Age: </label>
         <div class="form-group">
-          <label class="control-label" style="margin-right:10px">Years: </label>
+          <label class="control-label" style="margin-right:10px">Age (Years): </label>
           <input class="form-control" type="text" placeholder="years" formControlName="ageYears">
         </div>
         <div class="form-group">
-          <label class="control-label" style="margin-right:10px">Months: </label>
+          <label class="control-label" style="margin-right:10px">Age (Months): </label>
           <input class="form-control" type="text" placeholder="months" formControlName="ageMonths">
         </div>
         <div class="form-group">
@@ -68,30 +65,37 @@
         </div>
         <div class="form-group">
           <label class="control-label" style="margin-right:10px">Adopt By: </label>
-          <input class="form-control" type="date" placeholder="Adopt By" formControlName="adoptBy">
+          <input class="form-control" type="text" placeholder="Adopt By" formControlName="adoptBy" bsDatepicker [bsConfig]="bsConfig">
         </div>
 
+        <h6 class="mt-3">Likes:</h6>
+        <div class="row">
+          <div class="form-group col-md-4" *ngFor="let like of likes">
+            <label class="checkbox-inline">
+                <input type="checkbox" (click)="addOrRemoveTag(like,'like')"> {{like}}
+            </label>
+          </div>
+        </div>
+        <h6 class="mt-3">Qualities:</h6>
+        <div class="row">
+          <div class="form-group col-md-4" *ngFor="let quality of qualities">
+            <label class="checkbox-inline">
+                <input type="checkbox"  (click)="addOrRemoveTag(quality,'quality')"> {{quality}}
+            </label>
+          </div>
+        </div>
+        <h6 class="mt-3">Good With:</h6>
+        <div class="row">
+          <div class="form-group col-md-4" *ngFor="let goodWith of goodWith">
+            <label class="checkbox-inline">
+                <input type="checkbox" (click)="addOrRemoveTag(goodWith,'goodWith')"> {{goodWith}}
+            </label>
+          </div>
+        </div>
         <div class="form-group text-center">
-          <button class="btn btn-success mt-3" type="submit">Register</button>
+          <button [disabled]="!animalRegisterForm.valid" class="btn btn-success mt-3" type="submit">Register</button>
           <button class="btn btn-default mt-3" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
-
-        <div class="form-group" *ngFor="let like of likes">
-          <label class="checkbox-inline">
-              <input type="checkbox" (click)="addOrRemoveTag(like,'like')"> {{like}}
-          </label>
-        </div>
-        <div class="form-group" *ngFor="let quality of qualities">
-          <label class="checkbox-inline">
-              <input type="checkbox"  (click)="addOrRemoveTag(quality,'quality')"> {{quality}}
-          </label>
-        </div>
-        <div class="form-group" *ngFor="let goodWith of goodWith">
-          <label class="checkbox-inline">
-              <input type="checkbox" (click)="addOrRemoveTag(goodWith,'goodWith')"> {{goodWith}}
-          </label>
-        </div>
-    
         
       </form>
     </div>
