message notif in nav, pass photo to userToUpdate

--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -51,7 +51,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="['/saved-animals']"><i class="fa fa-heart mr-1"></i>Saved Pets</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-envelope mr-1"></i>Messages</a>
+            <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-envelope mr-1"></i>Messages ({{messages}})</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-1"></i>Logout</a>
           </div>
