--- a/AnimalShelter-SPA/src/app/user-edit/user-edit.component.html
+++ b/AnimalShelter-SPA/src/app/user-edit/user-edit.component.html
@@ -94,7 +94,7 @@
                     <div class="invalid-feedback">State is required</div>
                   </div>
                   <div class="form-group text-center">
-                    <button class="btn btn-success" [disabled]="!isDifferent()" type="submit">Register</button>
+                    <button class="btn btn-success" [disabled]="!isDifferent()" type="submit">Update</button>
                     <button class="btn btn-default" type="button" (click)="reset()">Reset</button>
                   </div>
             </form>
